@@ -1,13 +1,15 @@
 package com.freezzah.minecities.blocks.building;
 
+import com.freezzah.minecities.utils.Requirement;
+
+import java.util.Arrays;
 import java.util.List;
 
 public class BankBuilding extends AbstractBuilding {
     @Override
-    public List<Integer> getGoldUpgradeRequirements() {
-        return List.of(100, 200);
+    List<Requirement> getRequirements() {
+        return Arrays.asList(new Requirement(0,0,0));
     }
-
     @Override
     public boolean checkLevelRequirements(byte desiredLevel) {
         return true;
